# ecg

./: .gitignore  CMakeLists.txt  README.MD  makefile  treinar.py
include/: ClassificadorECG.h  EcgBuffer.h  SerialPort.h
sensor/: capture_signal.ino
src/: ClassificadorECG.cpp  EcgBuffer.cpp  SerialPort.cpp  main.cpp  simulation.cpp
tests/: test_main.cpp
